--- a/debian/po/da.po
+++ b/debian/po/da.po
@@ -7,7 +7,7 @@
 # /usr/share/doc/po-debconf/README-trans
 # or http://www.debian.org/intl/l10n/po-debconf/README-trans
 # Developers do not need to manually edit POT or PO files.
-# 
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: uw-imap 2007b\n"
@@ -16,6 +16,7 @@ msgstr ""
 "PO-Revision-Date: 2008-07-03 23:55+0200\n"
 "Last-Translator: Jonas Smedegaard <dr@jones.dk>\n"
 "Language-Team: Danish <dansk@klid.dk>\n"
+"Language: da\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
