--- a/debian/po/de.po
+++ b/debian/po/de.po
@@ -11,6 +11,7 @@ msgstr ""
 "PO-Revision-Date: 2007-10-28 17:54+0100\n"
 "Last-Translator: Helge Kreutzmann <debian@helgefjell.de>\n"
 "Language-Team: de <debian-l10n-german@lists.debian.org>\n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
