--- a/debian/po/es.po
+++ b/debian/po/es.po
@@ -35,6 +35,7 @@ msgstr ""
 "PO-Revision-Date: 2007-10-17 11:17+0200\n"
 "Last-Translator: Carlos Galisteo <cgalisteo@k-rolus.net>\n"
 "Language-Team:  <debian-l10n-spanish@lists.debian.org>\n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ISO-8859-15\n"
 "Content-Transfer-Encoding: 8bit\n"
