--- a/debian/po/nl.po
+++ b/debian/po/nl.po
@@ -19,6 +19,7 @@ msgstr ""
 "PO-Revision-Date: 2006-04-21 21:00+0100\n"
 "Last-Translator: Vincent Zweije <zweije@xs4all.nl>\n"
 "Language-Team: Debian-Dutch <debian-l10n-dutch@lists.debian.org>\n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ISO-8859-15\n"
 "Content-Transfer-Encoding: 8bit\n"
