--- a/debian/po/pt_BR.po
+++ b/debian/po/pt_BR.po
@@ -12,6 +12,7 @@ msgstr ""
 "PO-Revision-Date: 2008-03-04 14:23-0300\n"
 "Last-Translator: Eder L. Marques (frolic) <frolic@debian-ce.org>\n"
 "Language-Team: l10n Portuguese <debian-l10n-portuguese@lists.debian.org>\n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
