--- a/debian/po/sv.po
+++ b/debian/po/sv.po
@@ -18,6 +18,7 @@ msgstr ""
 "PO-Revision-Date: 2007-10-15 15:17+0100\n"
 "Last-Translator: Daniel Nylander <po@danielnylander.se>\n"
 "Language-Team: Swedish <debian-l10n-swedish@lists.debian.org>\n"
+"Language: sv\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=iso-8859-1\n"
 "Content-Transfer-Encoding: 8bit\n"
